<resources>
    <string name="app_name">COSC341Lab1</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="pear">Pear</string>
    <string name="BananaPrice">2.50</string>
    <string name="confirm">CONFIRM</string>
    <string name="OrangePrice">1.80</string>
    <string name="PearPrice">2.25</string>
    <string name="ApplePrice">2.00</string>
    <string name="TotalPrice">Price: $0.00</string>

    <string-array name="my_array">
        <item>0 Lbs</item>
        <item>1 Lbs</item>
        <item>2 Lbs</item>
        <item>5 Lbs</item>
        <item>10 Lbs</item>
        <item>20 Lbs</item>
    </string-array>

</resources>
